<resources>
    <string name="app_name">SiS Chat App</string>
    <string name="app_logo">App Logo</string>
    <string name="join_now">Join Now</string>
    <string name="simple_amp_safe"><![CDATA[Simple & Safe]]></string>
    <string name="continue_text">Continue</string>
    <string name="welcome_back">Welcome Back 👋🏼</string>
    <string name="input_your_phone_number_for_sign_in">Input your phone number for sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="back_icon">back_icon</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_prompt_msg">Check your SMS messages. we\'ve sent the verification code to </string>
    <string name="expiration_msg">Code will expire on</string>
    <string name="invalid_code_msg">Verifications code is invalid</string>
    <string name="invalid_phone_no_msg">Your phone number is invalid</string>
    <string name="otp_app_bar">OTP Verification</string>
    <string name="register_app_bar">Register</string>
    <string name="register_prompt_msg">Create a new account</string>
    <string name="register_sub_prompt_msg">Input your data for create your account</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="full_name_hint">Input Full Name</string>
    <string name="username_hint">Input Username</string>
    <string name="bio">Bio</string>
    <string name="bio_hint">Input Bio</string>
    <string name="setup_profile_app_bar">Setup Profile</string>
    <string name="setup_profile_prompt_msg">Input your image for profile</string>
    <string name="register">Register</string>
    <string name="start_chat">Start Chatting</string>
    <string name="success_prompt">Now You All Setup</string>
    <string name="profile_creation_prompt">Your profile has been successfully created</string>
    <string name="title_activity_app_bottom_nav">AppBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_call">Call</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
</resources>