<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20sp"
    android:weightSum="1"
    tools:context=".ui.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:text="@string/welcome_back"
                android:textColor="@color/medium_gray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="28sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:text="@string/input_your_phone_number_for_sign_in"
                android:textColor="@color/regular_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:text="@string/phone_number"
                android:textColor="@color/regular_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_number_bg"
                android:elevation="10sp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/input_phone_number"
                android:inputType="phone"
                android:paddingStart="16sp"
                android:paddingTop="12sp"
                android:paddingBottom="12sp"
                android:textColorHint="@color/medium_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:paddingTop="4sp"
                android:text="@string/invalid_phone_no_msg"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.10"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_gravity="bottom"
                android:background="@drawable/join_now_bg"
                android:fontFamily="@font/inter"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/continue_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>