<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.RegisterPageOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:elevation="25sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20sp"
            android:paddingTop="12sp"
            android:paddingEnd="12sp"
            android:paddingBottom="12sp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/register_app_bar"
            android:textColor="@color/medium_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/gray_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20sp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.90"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/register_prompt_msg"
                        android:textColor="@color/medium_gray"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="28sp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center"
                        android:text="@string/register_sub_prompt_msg"
                        android:textColor="@color/light_gray"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4sp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start"
                        android:text="@string/full_name"
                        android:textColor="@color/regular_gray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/full_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/phone_number_bg"
                        android:elevation="10sp"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/full_name_hint"
                        android:inputType="text"
                        android:paddingStart="16sp"
                        android:paddingTop="12sp"
                        android:paddingBottom="12sp"
                        android:textColorHint="@color/medium_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4sp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start"
                        android:text="@string/username"
                        android:textColor="@color/regular_gray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/phone_number_bg"
                        android:elevation="10sp"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/username_hint"
                        android:inputType="text"
                        android:paddingStart="16sp"
                        android:paddingTop="12sp"
                        android:paddingBottom="12sp"
                        android:textColorHint="@color/medium_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4sp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="start"
                        android:text="@string/bio"
                        android:textColor="@color/regular_gray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/bio_et"
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:background="@drawable/phone_number_bg"
                        android:elevation="10sp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="top"
                        android:hint="@string/bio_hint"
                        android:inputType="textMultiLine"
                        android:paddingStart="16sp"
                        android:paddingTop="12sp"
                        android:paddingBottom="12sp"
                        android:textColorHint="@color/medium_gray" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20sp"
                android:layout_weight="0.10"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/continue_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48sp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/join_now_bg"
                    android:fontFamily="@font/inter"
                    android:foreground="?android:selectableItemBackground"
                    android:text="@string/continue_text"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>