<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20sp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.65"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/first_page_icon" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="SiS Chat"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/simple_amp_safe"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.10"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/join_now"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_gravity="bottom"
            android:background="@drawable/join_now_bg"
            android:fontFamily="@font/inter_regular"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/join_now"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>