<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.RegisterFinalPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:elevation="25sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20sp"
            android:paddingTop="12sp"
            android:paddingEnd="12sp"
            android:paddingBottom="12sp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/setup_profile_app_bar"
            android:textColor="@color/medium_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/gray_color" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingTop="28dp"
        android:paddingRight="20sp"
        android:paddingBottom="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/setup_profile_app_bar"
                android:textColor="@color/medium_gray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="34sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/setup_profile_prompt_msg"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/upload_icon"
                    android:id="@+id/upload_btn"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.10"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_gravity="bottom"
                android:background="@drawable/join_now_bg"
                android:fontFamily="@font/inter"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>