<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.OtpVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:elevation="25sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="20sp"
            android:paddingTop="12sp"
            android:paddingEnd="12sp"
            android:paddingBottom="12sp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/otp_app_bar"
            android:textColor="@color/medium_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/gray_color" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingTop="28dp"
        android:paddingRight="20sp"
        android:paddingBottom="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/otp_app_bar"
                android:textColor="@color/medium_gray"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="34sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/otp_prompt_msg"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<EditText
                    android:id="@+id/otp_digit_1"
                    android:layout_width="74sp"
                    android:layout_height="74sp"
                    android:layout_marginEnd="12sp"
                    android:background="@drawable/phone_number_bg"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_digit_2"
                    android:layout_width="74sp"
                    android:layout_height="74sp"
                    android:layout_marginEnd="12sp"
                    android:background="@drawable/phone_number_bg"
                    android:cursorVisible="true"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_digit_3"
                    android:layout_width="74sp"
                    android:layout_height="74sp"
                    android:layout_marginEnd="12sp"
                    android:background="@drawable/phone_number_bg"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/otp_digit_4"
                    android:layout_width="74sp"
                    android:layout_height="74sp"
                    android:background="@drawable/phone_number_bg"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />-->

                <com.mukeshsolanki.OtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4.5sp"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="phone"
                    android:itemBackground="@drawable/otp_bg"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:textStyle="bold"
                    app:OtpHideLineWhenFilled="true"
                    app:OtpItemCount="6"
                    app:OtpItemRadius="6dp"
                    app:OtpItemSpacing="4.5sp"
                    app:OtpLineColor="@color/gray_color"
                    app:OtpState_filled="true"
                    app:OtpViewType="rectangle" />

            </LinearLayout>

            <TextView
                android:id="@+id/wrong_otp_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:paddingTop="20sp"
                android:paddingBottom="10sp"
                android:text="@string/invalid_code_msg"
                android:textColor="@color/red_color"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/resend_otp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/expiration_msg"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="34sp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="60"
                android:textColor="@color/blue_btn_color"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.10"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_gravity="bottom"
                android:background="@drawable/join_now_disabled_bg"
                android:fontFamily="@font/inter"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/continue_text"
                android:textColor="@color/medium_gray"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>